agregada mi parte de relaxer

--- a/relaxer/relaxer.html
+++ b/relaxer/relaxer.html
@@ -58,49 +58,80 @@
 			
 		</div>
 
+
+
+
+
+
 		<div class="G1 esconder" id="G1">
 			
 			<p>
-				Relaxer es el nombre del nuevo disco de estudio......jowñofijwep wrvn vpirw l 0pvp rfp0pir f pvjefpo fpqef fieq v duq0pefqegqg w euf efou feoufb 
-				efefjo fioe fpqe fpqe0p epf eqwefwernfp0pef eprgwr fe fe0p0pñ oe qepf efperwgqq epf eqfpeq fepf f
+				El 3 de marzo se dio comienzo a la expectación de este nuevo disco a través de sus redes sociales por medio de un audio subtitulado "00110011 01110111 01110111", bytes que se traducen como "3WW" que fue el nombre del primer track liberado por la banda solo 3 días después, seguido por "In cold blood" que fue lanzada el 29 de marzo y posteriormente "Adeline" solo un par de días antes del lanzamiento oficial del nuevo disco el día 2 de junio de este presente año 2017. 
 			</p>
 			<div></div>
 			<p>
-				ho wfbbofbgrij fbb  wep wrvn  gvpirw l vp rfpirf pvjefpo fpqef fieq v duqef euf efou feoufb 
-				efefjo fioe fpqe fprgwrg wrvg0prw wrrqe 00per0pwvw p  eqbrfpef ewfvrwrv bwbw pfeb ggbebwr feñ oe qepf efpeq epf eqfpeq fepf 0pf
-			</p>
-			<div></div>
-			<p>
-				gowñofijwep wrvn vpirw l vp rwb rwrwfpirf pvrqgjefpo fpqef fieq v duqef euf efou feoufb 
-				efefjo fioe fpqe fpqe epfwrgbrweqfpef ewrpfe feñ oe qepf efpwveq epf eqfpeq fepf f
-			</p>
-			<div></div>
-			<p>
-				cowñofijwep wrvn vpirgrgwrw l vrwg p rfpirf pvjefpo b wf fpqef fieq v duqef euf eforwgurw feoufb 
-				efefjo fioe fpqe fpqe w epfw eqfpef epfewwr wrg feñ oe qegwggwrgwrrpf efwrgq erwgpf eqfpeq fepf f
+				La forma en que manejaron el periodo anterior al lanzamiento del 2 de junio fue muy buena a mi modo de ver, generando mucho hype entre sus seguidores (incluyéndome) y no era para menos si sacaron hasta su propio videojuego que puedes encontrar en su <a href="http://altjband.com/relaxer/" class="linkex">web oficial</a>, el cual está diseñado por Osamu Sato y es una recreación del juego de playstation titulado LSD (de 1998) del mismo Osamu. No está demás señalar que el arte del disco y otros diseños promocionales fueron sacados de dicho juego. A esto hay que añadir sus presentaciones en vivo pre-lanzamiento en programas como el de Jools holland, jimmy kimel, jimmy fallon, Tiny Desk, BBC… entre otros, que en general fueron bastante buenas.
 			</p>
 			<div></div>
 			<img src="img/altj1.jpg" alt="" width="100%">
 			<div></div>
 			<p>
-				kqrvgrg bwrgrwofij wrgwrgep wrvvw wrgpen efikilpqel 0p0 códp0pv djbajdnc  dcef euf efou feoufb 
-				efe fjoadv  brgqrgqrglo p wrgbw bwprw wf0pvlo qepf e0p0pfpeq epf eqfpeq fepf f
-			</p>
-			<p>
-				ho wfbbofbgrij fbb  wep wrvn  gvpirw l vp rfpirf pvjefpo fpqef fieq v duqef euf efou feoufb 
-				efefjo fioe fpqe fprgwrg wrvg0prw wrrqe 00per0pwvw p  eqbrfpef ewfvrwrv bwbw pfeb ggbebwr feñ oe qepf efpeq epf eqfpeq fepf 0pf
+				He de decir que la primera vez que lo escuché completo me pareció extraño y no pude evitar poner alguna que otra mueca cuando escuche algunas canciones, pero al igual que pasa con muchos de los más grandes discos o bandas a los que me he aficionado en mi vida comienzan a gustarte cuando lo descubres, recalco: NO CUANDO LO ESCUCHAS, sino cuando lo admiras y como dije "Descubres" que tiene para ofrecerte. 
 			</p>
 			<div></div>
 			<p>
-				gowñofijwep wrvn vpirw l vp rwb rwrwfpirf pvrqgjefpo fpqef fieq v duqef euf efou feoufb 
-				efefjo fioe fpqe fpqe epfwrgbrweqfpef ewrpfe feñ oe qepf efpwveq epf eqfpeq fepf f
+				El disco en general me recordó un poco al Piper at the Gates of Dawn y lo digo con el debido respeto que se merece el primer disco de Pink Floyd. En mi opinión el álbum es más experimental de lo que podría haber intuido, pero sí que podía esperarse viniendo de una banda como alt-J de la cual gran parte de su material lo definiría como Art Rock (rock-arte) mezclado a veces con folk inglés y toques indie. 
 			</p>
 			<div></div>
 			<p>
-				cowñofijwep wrvn vpirgrgwrw l vrwg p rfpirf pvjefpo b wf fpqef fieq v duqef euf eforwgurw feoufb 
-				efefjo fioe fpqe fpqe w epfw eqfpef epfewwr wrg feñ oe qegwggwrgwrrpf efwrgq erwgpf eqfpeq fepf f
+				En su totalidad es un buen álbum a mi parecer y de hecho me gustó mucho después claro de haberlo oído varias veces. Aunque si he de decir que es menos cohesivo que los 2 anteriores de la agrupación cosa que al menos yo rescato mucho de los materiales discográficos y con esto me refiero a la congruencia de las ideas musicales que se generan al ir recorriendo cada uno de sus elementos en orden, por supuesto esto no significa que no posea cohesión alguna sino simplemente que no la posee del modo al que nos tenía acostumbrado el conjunto con sus 2 anteriores trabajos. 
 			</p>
+			<p>
+				Con esto me refiero en palabras sencillas a que eché de menos la falta de lo que son aquellos tracks que generan puentes entre focos musicales del disco como lo son “Intro” y los Interludios de “An Awesome Wave” y como fueron “Intro” y cada fase de “Nara” en “This Is All Yours”, dejando la responsabilidad de cohesionar “Relaxer” solo a sus temas principales (aunque podría considerarse a “Last Year” + “Pleader” como un Outro) cosa que no necesariamente es mala sino simplemente distinto y gracias a la cual también el disco fue más corto. Pero no mal interpreten, al menos yo quedé con ganas de más.
+			<div></div>
+			<p>
+				 Evidentemente al ser un disco más corto posee menos Killer Tracks (como me gusta llamarlos), que son aquellos temas que en el fondo llegan más a las masas, aquellos que más “pegan” o que podrían sonar más en la radio como lo sería claramente “Breezeblocks” en su primer álbum que sin ser necesariamente su mejor canción (aunque sí muy buena), es la más famosa. En este apartado a mi parecer queda por debajo de los demás discos, aunque esto no tiene mucha relevancia a menos que solo quieras escuchar uno o dos temas cientos de veces, pero asumiendo que te guste la música como un arte y prefieres apreciar una composición completa entonces esto no debería ser un problema para ti.
+			</p>
+			<div></div>
+			<p>
+				En cuanto al sonido del disco prefiero no adelantarme demasiado ya que no tendré una opinión definitiva hasta haberlo escuchado en un formato sin compresión y no simplemente en youtube/Spotify (sí, subieron todas las canciones gratis a su canal de youtube por si te lo preguntabas). Pero por ahora puedo decir vagamente que puede que esté por encima al menos del An Aweosome Wave y por debajo de This Is All Yours, pero no está nada escrito en piedra por ahora.
+			</p>
+			<div></div>
+			<p>
+				Hablando un poco más de lo que son los tracks propiamente dicho, lo primero es que los escuchen. Hecho esto y hablando en orden:			</p>
+			<div></div>
+			<p>
+				Pienso que 3WW no puede ser mejor tema para comenzar un disco, es casi un intro como anteriormente había comenzado los discos esta banda, pero evidentemente con mucho más contenido siendo para mi uno de los temas que más disfruto al escuchar individualmente (díganme si no es el tema perfecto para despertarse en las mañanas). 
+			</p>
+			<div></div>
+			<p>
+				In Cold Blood y Deadcrush son claramente lo más semejante a un Killer track a mi parecer (en cuanto a In Cold Blood el ser una canción explicita puede ponerle problemas en ese aspecto) y 2 muy buenos temas por cierto. Me gustaría mencionar que Deadcrush posee un pequeño guiño o Easter Egg a Intro de An Aweome Wave en el minuto 2:05 donde suena el mismo Yeah del tema nombrado.
+			</p>
+			<div></div>
+			<p>
+				Si nos referimos a The House of the Rising Sun es complicado hablar de un cover (siempre es complicado hablar de un cover si hablamos de alt-J como por ejemplo la parte final de Leaving Nara que basicamente es una reversión de Lovely Day escrita por Bill Withers), si tomas como referencia la versión de The Animals la verdad es que son 2 canciones completamente diferentes. Cuenta una historia completamente distinta, son musicalmente muy diferentes, y lo único que comparten son el nombre y los primeros 2 versos de letra. En lo que a mí respecta son 2 canciones aparte y por lo tanto no tiene sentido compararlas (solo hay que amar ambas jaja).
+			</p>
+			<div></div>
+			<p>
+				 La verdad es que The house of The Rising Sun (en español la casa del sol naciente) es una canción de Folklore Estadounidense cuyo autor no se conoce y que ha sido versionada en muchas ocasiones siendo la más famosa la versión de The Animal. En algunas versiones, el tema se interpreta desde la perspectiva de una mujer que sigue a un apostador a Nueva Orleans y que termina prostituyéndose en La Casa del Sol Naciente. The Animals la interpretó desde la perspectiva de un hombre, jugador y borracho, que cuenta cómo ha perdido su vida inmerso en pecado y miseria. Mientras que alt-J narra la historia de un infante cuyo padre es un adicto al juego y un alcohólico que frecuenta la casa del sol naciente.
+			</p>
+			<div></div>
+			<p>
+				Hit me Like That Snare es probablemente la canción más rara de todo el disco, puede ser una mezcla extraña entre un sonido folk/rock/progresivo/garaje/etc y es que hasta una parte de la canción esta en japonés (aunque sean solo la cuenta del 1 al 10 jaja) sin embargo no es la primera vez que incorporan otro idioma, solo es cosa de recordar “Matilda” que en una de sus múltiples repeticiones del coro este es cantado en francés o algunas palabras en español agregadas a” something good”. La canción en sí es tal vez la más difícil de digerir de todo Relaxer pero al menos para mí suena exactamente como me esperaba que sonara una canción que se llama Golpeame como a esa caja (de batería, tarola o redoblante) y a pesar de que desencaja tal vez un poco con la línea de sonido del resto del disco si me parece que está bien lograda y que suena como sus autores querían que la escucharamos.
+			</p>
+			<div></div>
+			<p>
+				Por último, decir que los 3 ultimos temas eran exactamente lo que me esperaba de alt-J y es que son los 3 temas que posiblemente más se asemejan a su sonido de antaño con un motivo mucho más suave, artístico y delicado. Pleader en particular me parece un buen cierre para Relaxer añadiendo ese toque de sonido Folk Britanico y dejándonos a la espera de oír aquel siguiente tema que lamentablemente para nosotros no existe y por el cual tendremos que aguantar hasta el próximo trabajo discográfico de estos músicos, trabajo que espero con mucha ansia desde ya.
+			</p>
+
 		</div>
+
+
+
+
+
+
+
 		<div class="R1 esconder" id="R1">
 			
 			<p>
