--- a/relaxer/relaxer.html
+++ b/relaxer/relaxer.html
@@ -42,14 +42,14 @@
 
 	<section class="content">
 
-		<h2>Lo nuevo de Alt-J en este 2017</h2>
+		<h2>Lo nuevo de Alt-J en este 2017 se llama Relaxer</h2>
 		<figure>
 			<picture><img src="img/relaxer.jpg" alt="" width="60%"></picture>
 			
 		</figure>
 
 		<div class="versiones">
-			<h3>En esta ocación ambos cofundadores de Crudo han preparado review propia</h3>
+			<p>este es un caso especial porque los 2 fundadores de esta pagina son fanaticos de alt j y estos ultimos fueron una de las inspiraciones que los llevó a crear crudo, por lo que esta review se realizará desde 2 perspectivas</p>
 			<h4>haz click sobre la imagen de la review de que desees leer</h4>
 			<button class="guillermo au" id="guillermo" onclick="f1()"></button>
 			<button class="roberto au" id="roberto" onclick="f2()"></button>
