--- a/relaxer/relaxer.html
+++ b/relaxer/relaxer.html
@@ -18,8 +18,8 @@
 		</div>
 		<div class="fullscreen-bg">
 		    <video loop muted autoplay poster="img/altjbg.jpg" class="fullscreen-bg__video" plays-inline width='80%'>
-		        <source src="video/3ww.mp4" type="video/mp4">
 		        <source src="video/3ww.webm" type="video/webm">
+		        <source src="video/3ww.mp4" type="video/mp4">
 	<!-- 	        <source src="video/big_buck_bunny.ogv" type="video/ogg"> -->
 		    </video>
 		</div>
@@ -42,14 +42,14 @@
 
 	<section class="content">
 
-		<h2>Lo nuevo de Alt-J en este 2017 se llama Relaxer</h2>
+		<h2>Lo nuevo de alt-J en este 2017 se llama Relaxer</h2>
 		<figure>
 			<picture><img src="img/relaxer.jpg" alt="" width="60%"></picture>
 			
 		</figure>
 
 		<div class="versiones">
-			<p>este es un caso especial porque los 2 fundadores de esta pagina son fanaticos de alt j y estos ultimos fueron una de las inspiraciones que los llevó a crear crudo, por lo que esta review se realizará desde 2 perspectivas</p>
+			<p>Este es un caso especial porque los 2 fundadores de esta pagina son fanaticos de alt j y estos ultimos fueron una de las inspiraciones que los llevó a crear crudo, por lo que esta review se realizará desde 2 perspectivas</p>
 			<h4>haz click sobre la imagen de la review de que desees leer</h4>
 			<button class="guillermo au" id="guillermo" onclick="f1()"></button>
 			<button class="roberto au" id="roberto" onclick="f2()"></button>
