--- a/mathrock/mathrock.html
+++ b/mathrock/mathrock.html
@@ -1,10 +1,17 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+	<link rel="apple-touch-icon" sizes="180x180" href="../favicon/apple-touch-icon.png">
+	<link rel="icon" type="image/png" sizes="32x32" href="../favicon/favicon-32x32.png">
+	<link rel="icon" type="image/png" sizes="16x16" href="../favicon/favicon-16x16.png">
+	<link rel="manifest" href="../favicon/manifest.json">
+	<link rel="mask-icon" href="../favicon/safari-pinned-tab.svg" color="#5bbad5">
+	<meta name="theme-color" content="#ffffff">
+
 	<link href="https://fonts.googleapis.com/css?family=Fira+Sans:300,400|Raleway:300,400|" rel="stylesheet">
 	<link rel="stylesheet" href="style.css">
 	<meta charset="UTF-8">
-	<title>Document</title>
+	<title>Math Rock | Crudo</title>
 </head>
 <body>
 
@@ -30,7 +37,7 @@
 			<div></div>
 			<p> Probablemente una de las razones por las que en su momento no perdí la fe en la guitarra eléctrica y la innovación musical en los subgéneros del rock fue gracias a encontrarme en la red una presentación en vivo de CHON en Audiotree en vivo por allí en 2015. Fue mi primera exposición al Math Rock y no pude despegar ni mis oídos de los parlantes ni mis ojos del monitor durante los 25 min que duraba la presentación.</p>
 			<div></div>
-			<p> No pude evitar verme envuelto en asombro al escuchar la forma en que se manejaban estructuras rítmicas complejas muy fuera del alcance de los típicos géneros más tradicionales del rock que conformaban la zona de confort en la que me posicionaba al momento de escuchar música. Ahora no solo estructuras rítmicas sino también armónicas conformadas por seguidos acordes extendidos y arpegios ejecutados de manera quirúrgica y sin dejar de dar espacio a debidos silencios cuando eran necesarios. Puede que por como lo describo pueda sonar al estilo máximo y definitivo del rock y depende de cómo lo mires puede ser así, sin embargo, todo como sus virtudes tiene también sus defectos, pero aquí no vengo a contarles lo malo sino lo bueno. Como guitarrista amateur que soy me lo que me llamó más la atención fue precisamente ello sus guitarras sin embargo todos los instrumentos brillaban de manera aplaudible en especial la batería que en este género resalta precisamente por el énfasis en las estructuras rítmicas.</p>
+			<p> No pude evitar verme envuelto en asombro al escuchar la forma en que se manejaban estructuras rítmicas complejas muy fuera del alcance de los típicos géneros más tradicionales del rock que conformaban la zona de confort en la que me posicionaba al momento de escuchar música. Ahora no solo estructuras rítmicas sino también armónicas conformadas por seguidos acordes extendidos y arpegios ejecutados de manera quirúrgica y sin dejar de dar espacio a debidos silencios cuando eran necesarios. Puede que por como lo describo pueda sonar al estilo máximo y definitivo del rock y depende de cómo lo mires puede ser así, sin embargo, todo como sus virtudes tiene también sus defectos, pero aquí no vengo a contarles lo malo sino lo bueno. Como guitarrista aficionado que soy, lo que más llamó mi atención fue precisamente ello sus guitarras sin embargo todos los instrumentos brillaban de manera aplaudible en especial la batería que en este género resalta precisamente por el énfasis en las estructuras rítmicas.</p>
 			<div></div>
 			<picture><img src="img/CHON1.jpeg" alt="" height="60%"></picture>
 			izquierda: Erick Hansel | centro: Nathan Camarena | derecha: Mario Camarena
@@ -40,7 +47,7 @@
 			<P>Sin embargo y a pesar de lo mucho que me impacto en general el estilo también he de decir que es un tipo de musica difícil de sacar a relucir del todo debido a la complejidad que conlleva el componer un tema con la totalidad que implica el género en sí y además de ello lograr que suene bien, sin contar el sonido tan diferente que pueden llegar a tener 2 artistas de Math Rock. Por si fuera poco también hay que tomar en cuenta que el público que consume este tipo de música no es el más amplio, por lo que a mi punto de vista y por lo menos para mi es dificil encontrar los artistas o álbumes que realmente merezcan la pena y que además encajen con mi gusto ya que hay muchos otras bandas que también son buenas pero simplemente a mí no me llaman la atención porque no logran lo que busco en el Math (razón por la que no hablo quizás de otras agrupaciones reconocidas del género como Don Caballero o Minus the Bear por ejemplo). </P>
 			<div></div>
 			<picture><img src="img/TTNG.jpg" alt="" widht="600px"></picture>
-			izquierda: ofjwng | centro: fjenoe | derecha:giohir
+			
 			<div></div>
 			<P> Por esto último es que básicamente mi espectro de grupos cuando me pongo a escuchar MathRock se refiere poco menos que se reduce solamente a escuchar CHON y This Town Needs Guns A.K.A TTNG.
 De este último también rescato mucho, su sonido también es muy limpio y en este caso sí que nos encontramos con más uso de la voz humana y aunque sería normal esperar que esta pasara a segundo plano por las características del genero, no es el caso de TTNG en cuyas composiciones la voz no es un elemento forzado sino un complemento que encaja a la perfección con su estilo aportando melodía y por supuesto significado lirico. Sus integrantes actuales los conforman Henry Tremain en voz/bajo/guitarra, Tim Collis en la primera Guitarra y Chris Collis en la Batería.
@@ -53,6 +60,11 @@ De este último también rescato mucho, su sonido también es muy limpio y en es
 			<P> Obviamente no soy un versado en lo que a Math Rock respecta y espero irme sumergiendo cada vez más en las bondades y grupos que el género ofrece que probablemente aún no he tenido la suerte de conocer. Me queda Mucho por descubrir y espero que con esta especie de reseña/historia de cómo conocí este estilo te veas tan entusiasmado como yo de conocer más acerca de él.</P>
 		</div>
 		<div></div>
+	</section>
+	<section class="autor">
+		<article class="G1"> <img src="img/guillermo.jpg" alt="" width="50px">Guillermo Del Pino		
+			<p>bla bla bla bla estudiante de ingieria bla bla bla guitarrista amteur bla bla bla</p>
+		</article>
 	</section>
 	<footer>
 		<div class="social">
