--- a/index.html
+++ b/index.html
@@ -1,10 +1,16 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+	<link rel="apple-touch-icon" sizes="180x180" href="favicon/apple-touch-icon.png">
+	<link rel="icon" type="image/png" sizes="32x32" href="favicon/favicon-32x32.png">
+	<link rel="icon" type="image/png" sizes="16x16" href="favicon/favicon-16x16.png">
+	<link rel="manifest" href="favicon/manifest.json">
+	<link rel="mask-icon" href="favicon/safari-pinned-tab.svg" color="#5bbad5">
+	<meta name="theme-color" content="#ffffff">
 	<link href="https://fonts.googleapis.com/css?family=Raleway:300|400|600" rel="stylesheet">
 	<link rel="stylesheet" type="text/css" href="style.css">
 	<meta charset="UTF-8">
-	<title>Document</title>
+	<title>Crudo | Musica y más</title>
 </head>
 <body> 
 	<header>
@@ -99,7 +105,18 @@
 					</div>
 					
 
+				</article>				
+				<article class="post 3"> 
+					<a href="kasabian/kasabian.html"><img src="img/kasabian1.jpg" alt=""></a>
+					<div class="pcon">
+						<h2>Reseña: For Crying Out Loud</h2>
+						<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Autem laborum obcaecati, ullam unde vitae sed delectus cum nobis quam, optio explicabo, laudantium ipsa,...
+						<a href="kasabian/kasabian.html" class="leer">leer mas</a>
+						</p>
+
+					</div>
 				</article>
+				
 			</div>
 
 
