--- a/relaxer/relaxer.html
+++ b/relaxer/relaxer.html
@@ -1,10 +1,17 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+	<link rel="apple-touch-icon" sizes="180x180" href="../favicon/apple-touch-icon.png">
+	<link rel="icon" type="image/png" sizes="32x32" href="../favicon/favicon-32x32.png">
+	<link rel="icon" type="image/png" sizes="16x16" href="../favicon/favicon-16x16.png">
+	<link rel="manifest" href="../favicon/manifest.json">
+	<link rel="mask-icon" href="../favicon/safari-pinned-tab.svg" color="#5bbad5">
+	<meta name="theme-color" content="#ffffff">
+
 	<link href="https://fonts.googleapis.com/css?family=Raleway:300|400|600" rel="stylesheet">
 	<link rel="stylesheet" href="style.css">
 	<meta charset="UTF-8">
-	<title>Relaxer Review</title>
+	<title>Relaxer Review | Crudo</title>
 </head>
 <body>
 	<header>
