detalles pag principal

--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
 					<a href="mathrock/mathrock.html"><img src="img/CHON.jpg" alt=""></a>	
 					<div class="pcon">
 						<h2>Hablemos de Math Rock</h2>
-						<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Debitis quia molestiae pariatur natus! Praesentium temporibus in, cum illo rerum delectus repellendus ...
+						<p>Probablemente una de las razones por las que en su momento no perdí la fe en la guitarra eléctrica y la innovación musical en los subgéneros del rock fue gracias a...
 						<a href="mathrock/mathrock.html" class="leer">leer mas</a>
 						</p>
 
@@ -98,7 +98,7 @@
 					<a href="relaxer/relaxer.html"><img src="img/relaxer.jpg" alt=""></a>
 					<div class="pcon">
 						<h2>Reseña: relaxer</h2>
-						<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Autem laborum obcaecati, ullam unde vitae sed delectus cum nobis quam, optio explicabo, laudantium ipsa,...
+						<p>El 3 de marzo se dio comienzo a la expectación de este nuevo disco a través de sus redes sociales por medio de un audio subtitulado "00110011 01110111 01110111", bytes que...
 						<a href="relaxer/relaxer.html" class="leer">leer mas</a>
 						</p>
 
@@ -110,12 +110,17 @@
 					<a href="kasabian/kasabian.html"><img src="img/kasabian1.jpg" alt=""></a>
 					<div class="pcon">
 						<h2>Reseña: For Crying Out Loud</h2>
-						<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Autem laborum obcaecati, ullam unde vitae sed delectus cum nobis quam, optio explicabo, laudantium ipsa,...
+						<p>i me pidieran definir este 2017 en una sola palabra lo definiría como “regreso”, así es amigos, este año es el año de los regresos, gorillaz, alt j, muse… entre otros...
 						<a href="kasabian/kasabian.html" class="leer">leer mas</a>
 						</p>
 
 					</div>
 				</article>
+				<a href="">
+				<div class="maspost">
+					Mas Articulos
+				</div>
+				</a>
 				
 			</div>
 
