--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@
 					<a href="kasabian/kasabian.html"><img src="img/kasabian1.jpg" alt=""></a>
 					<div class="pcon">
 						<h2>Reseña: For Crying Out Loud</h2>
-						<p>i me pidieran definir este 2017 en una sola palabra lo definiría como “regreso”, así es amigos, este año es el año de los regresos, gorillaz, alt j, muse… entre otros...
+						<p>Si me pidieran definir este 2017 en una sola palabra lo definiría como “regreso”, así es amigos, este año es el año de los regresos, gorillaz, alt j, muse… entre otros...
 						<a href="kasabian/kasabian.html" class="leer">leer mas</a>
 						</p>
 
