--- a/kasabian/kasabian.html
+++ b/kasabian/kasabian.html
@@ -33,9 +33,8 @@
 
 	<section class="bot">
 		<div class="container">
-			<h2 class="subt">El Género que me devolvió al Rock</h2>
 			<div></div>
-			<p> Si me pidieran definir este 2017 en una sola palabra lo definiría como “regreso”, así es amigos, este año es el año de los regresos, gorillaz, alt j, muse… entre otros.  Hoy nos detendremos en el primer disco que me ha llamado la atención este 2017, estamos hablando de “For crying out loud” de los británicos Kasabian, cabe decir que kasabian es una de las bandas que más respeto de la actualidad, así que esta reseña será critica cuando sea necesario y por supuesto con mucho cariño.</p>
+			<p><span class="negras"> Si me pidieran definir este 2017 </span>en una sola palabra lo definiría como “regreso”, así es amigos, este año es el año de los regresos, gorillaz, alt j, muse… entre otros.  Hoy nos detendremos en el primer disco que me ha llamado la atención este 2017, estamos hablando de “For crying out loud” de los británicos Kasabian, cabe decir que kasabian es una de las bandas que más respeto de la actualidad, así que esta reseña será critica cuando sea necesario y por supuesto con mucho cariño.</p>
 			<div></div>
 			<p> El álbum parte con “lll Ray (the King)” un comienzo fuerte, desgarrador, un clásico de los álbumes de Kasabian, si no me cree, escuche “bumblebee” del 48:13 o la infaltable “club foot” de su álbum debut. Después se nos presenta “you're in a love with a psycho”  primer single que dieron a conocer antes de lanzar el álbum, una canción simple, sin ninguna ciencia pero con un coro sencillo, perfecto para cantarlo hasta que se te quede pegada en la cabeza y con una tonada bastante dulce al oído, punto a favor para Kasabian. Cabe decir que hablare de los temas a destacar del disco ya que hay algunos que pueden sonar repetitivos o simplemente no destacan a diferencia de otros.</p>
 			<div></div>
@@ -46,13 +45,13 @@
 			<div></div>
 			<P>Otro tema a destacar es el que le sigue, nos referimos a “all through the night”, una canción melancólica donde Pizzorno nos seduce con su voz, una tonada acústica con la voz de pizzorno siempre es buena combinación, de mis favoritas. </P>
 			<div></div>
-			<picture><img src="img/TTNG.jpg" alt="" widht="600px"></picture>
+<!-- 			<picture><img src="img/TTNG.jpg" alt="" widht="600px"></picture> -->
 			
 			<div></div>
 			<P> Para finalizar tenemos “bless this acid house “tema que tampoco me gustaba tanto pero que al escucharla en el later with jools holland me hizo cambiar de percepción. Un aparte: el later with jools holland de kasabian (el de este año) es buenísimo, le recomiendo escucharlo.
 			</P>
 			<div></div>
-			<picture><img src="img/TTNG2.jpg" alt=""></picture>
+<!-- 			<picture><img src="img/TTNG2.jpg" alt=""></picture> -->
 			<div></div>
 			<P> Para poner fin al álbum tenemos “put your life on it”, perfecto para bajar el telón, muy buena manera de decirnos “adiós, gracias por escuchar nuestro disco, nos vemos para la próxima”.
 			Un aparte, el álbum viene con un concierto de kasabian que es bastante bueno , si no quedo conforme con el álbum le servirá para pasar el mal sabor.
