--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
 
 				
 		<div class="bot">
-			<h3 class="ra">Artículos recientes:</h3>
+			<h3 class="ra">Artículos recientes</h3>
 			<div class="posts">
 				
 				<article class="post1"> 
